--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^1.9.7",
     "framer-motion": "^10.16.4",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
